--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "marked": "^4.0.10",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12",
-    "vuex": "^3.6.2"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/marked": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "@vitejs/plugin-vue": "^2.0.0",
