--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
     "marked": "^4.0.10",
     "mitt": "^3.0.0",
     "vue": "^3.2.25",
